<resources>
    <string name="app_name">Scancare</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_scancare">Welcome to ScanCare</string>
    <string name="slogan">Find Your Healthy Skin With</string>
    <string name="slogan2">ScanCare!</string>
    <string name="button_scan">button scan</string>
    <string name="button_next_onboard">button_next</string>
    <string name="button_back_onboard">button_back_onboard</string>
    <string name="onBoard_skip">Skip</string>
    <string name="logout">Logout</string>
    <string name="slogan3">Find Your Healthy Skin With ScanCare!!</string>
    <string name="welcome_user_home">HI,</string>
    <string name="sapa">How\'s your day?</string>
    <string name="identify">Identify</string>
    <string name="tv_btn_scan">Scan your\nIngredients skincare</string>
    <string name="see_all">See all ►</string>
    <string name="image_bookmark">Image Bookmark</string>
    <string name="nama_scan">Nama Scan</string>
    <string name="image_item_history">Image Item History</string>
    <string name="description">Description</string>
    <string name="back_button">Back Button</string>
    <string name="image_ingredients">Image Ingredients</string>
    <string name="no_title">No Title</string>
    <string name="content_scan_fab">fab galeri dan camera</string>
    <string name="history">History</string>
    <string name="bookmark">Bookmark</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About Us</string>
    <string name="scan">SCAN</string>
    <string name="save">Save</string>
    <string name="tombol_edit_teks_deskripsi">tombol edit teks deskripsi</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="no_text_recognized">Tidak ada teks yang terdeteksi</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="confirm_pass">Konfirmasi Password Anda</string>
    <string name="input_email">Masukkan Email Anda</string>
    <string name="input_nama">Masukkan Nama Anda</string>
    <string name="input_pasword">Masukkan Password Anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Capital_login">LOGIN</string>
    <string name="Capital_sign_up">SIGN UP</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="empty">This field should not be empty</string>
    <string name="logo_splash">logo splash</string>
    <string name="your_email">Your Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="berbahaya">BERBAHAYA</string>
    <string name="ocr_failed_status">ocr gagal\n</string>
    <string name="bahan_berbahaya_ditemukan">Bahan Berbahaya Ditemukan</string>
    <string name="bahan_berbahaya_tidak_ditemukan">Bahan Berbahaya Tidak Ditemukan</string>
    <string name="teksAnalisis">Analisis:</string>
    <string name="hasil_analisis">Hasil Analisis</string>
    <string name="bahan_berbahaya">Bahan Berbahaya:</string>
    <string name="list_bahan">List Bahan</string>
    <string name="predict_skin">Predict Skin:</string>
    <string name="status">Status</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="fitur_belum_tersedia">Fitur Belum Tersedia</string>
    <string name="icon_logout">icon logout</string>
    <string name="icon_about_us">icon about us</string>
    <string name="iconn_edit_profile">iconn edit profile</string>
</resources>