<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ItemFinish"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_itemHistory"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/image_item_history"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_namaHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:layout_toEndOf="@+id/img_itemHistory"
            android:textSize="22sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_itemHistory"
            card_view:layout_constraintTop_toTopOf="@+id/img_itemHistory"
            tools:text="@string/nama_scan"/>

        <TextView
            android:id="@+id/tv_EventFinishDeskripsi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:justificationMode="inter_word"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_itemHistory"
            app:layout_constraintEnd_toEndOf="@id/tv_namaHistory"
            app:layout_constraintStart_toStartOf="@+id/tv_namaHistory"
            app:layout_constraintTop_toBottomOf="@+id/tv_namaHistory"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/description"
            tools:ignore="UnusedAttribute" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>